training/ollama/k8s/04-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ollama-granite-route
  namespace: ollama
spec:
  host: ollama-granite.apps.cluster-gqbjb.gqbjb.sandbox134.opentlc.com
  port:
    targetPort: 11434
  to:
    kind: Service
    name: ollama-granite-svc
    weight: 100
  wildcardPolicy: None
